adding some touch done

--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,30 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>codesandbox</title>
+    <!-- Primary Meta Tags -->
+<title>Public apis</title>
+<meta name="title" content="Public apis">
+<meta name="description" content="check out apis that are publicly and freely available on the internet. Built by bethropolis">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://github.com/bethropolis/public-apis">
+<meta property="og:title" content="Public apis">
+<meta property="og:description" content="check out apis that are publicly and freely available on the internet. Built by bethropolis">
+<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://github.com/bethropolis/public-apis"> 
+<meta property="twitter:title" content="Public apis">
+<meta property="twitter:description" content="check out apis that are publicly and freely available on the internet. Built by bethropolis">
+<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"> 
+    <title>Public apis</title>
   	<script src="https://unpkg.com/lightgallery.js" id="external-js"></script>
 </head>
   <body>
     <noscript>
-      <strong
-        >We're sorry but codesandbox doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
-      >
+      <strong>Javascript is required for the site to work.</strong> 
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
